Fix Netlify build: Update Node.js version to 20
- Updated netlify.toml NODE_VERSION from 18 to 20
- Added .nvmrc file specifying Node 20
- Added engines field to package.json requiring Node >=20.0.0
- Fixes EBADENGINE error with react-router-dom@7.8.2

--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
       "last 1 safari version"
     ]
   },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "devDependencies": {
     "@types/node": "^24.3.0",
     "autoprefixer": "^10.4.14",
