--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/supabase-js": "^2.56.0",
     "@testing-library/dom": "^10.4.1",
@@ -25,6 +26,7 @@
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "recharts": "^3.1.2",
+    "stripe": "^18.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
