--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.13.3",
     "form-data": "^4.0.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.542.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
