🔒 SECURITY: Remove all hardcoded Supabase keys - GitGuardian alert resolved
- Remove hardcoded Service Role Keys from all scripts
- Replace with secure environment variable references
- Add validation to prevent execution without proper env vars
- Update netlify.toml to use environment variables
- Delete files containing exposed keys
- Update .env.example with security warnings
- All scripts now fail safely without credentials

CRITICAL: Supabase Service Role Key must be rotated immediately

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,24 @@
 REACT_APP_SUPABASE_URL=your_supabase_url_here
 REACT_APP_SUPABASE_ANON_KEY=your_supabase_anon_key_here
-REACT_APP_SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+
+# Server-side only (NEVER expose in client)
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+SUPABASE_URL=your_supabase_url_here
+SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # Stripe Configuration
 REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_live_your_stripe_publishable_key_here
 STRIPE_SECRET_KEY=sk_live_your_stripe_secret_key_here
 
+# Mailgun Configuration (server-side only)
+MAILGUN_API_KEY=your_mailgun_api_key_here
+MAILGUN_DOMAIN=your_domain_here
+
 # Database Connection (for scripts)
 DATABASE_URL=postgresql://username:password@host:port/database
+
+# SECURITY WARNING:
+# - NEVER commit actual keys to version control
+# - Use environment variables or secure secret management
+# - Rotate keys immediately if exposed
+# - Service role keys should ONLY be used server-side
