--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@types/react-router-dom": "^5.3.3",
+    "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "emoji-picker-react": "^4.13.3",
     "form-data": "^4.0.4",
